@@ -38,6 +38,9 @@ module OAuth
       # decompose
       params = header[6,header.length].split(/[,=]/)
 
+      # odd number of arguments - must be a malformed header.
+      raise OAuth::Problem.new("Invalid authorization header") if params.size % 2 != 0
+
       # strip and unescape
       params.map! { |v| unescape(v.strip) }
 
